# backend/app.js
@@ -21,10 +21,10 @@ const swaggerDocument = require('./swagger.json');
 app.use(bodyParser.json())
   .use((req, res, next) => {
   res.setHeader('Access-Control-Allow-Origin', '*');
-  res.setHeader(
-    'Access-Control-Allow-Headers',
-    'Origin, X-Requested-With, Content-Type, Accept, Z-Key');
-  res.setHeader('Content-Type', 'application/json');
+  // res.setHeader(
+  //   'Access-Control-Allow-Headers',
+  //   'Origin, X-Requested-With, Content-Type, Accept, Z-Key');
+  // res.setHeader('Content-Type', 'application/json');
   res.setHeader('Access-Control-Allow-Methods', 'GET, POST, PUT, DELETE, OPTIONS');
   next();
 })
@@ -32,7 +32,7 @@ app.use(bodyParser.json())
   .use('/professional', professionalRoutes)  
   .use('/contacts', contactRoutes)
 
-  // .use('/api-docs', docRoutes);
+  // .use('/api-docs', docRoutes)
   .use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument));
 
 
